--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "hallo",
   "description": "Simple rich text editor",
   "author": "Henri Bergius <henri.bergius@iki.fi>",
-  "homepage": "http://bergie.github.com/hallo/",
-  "version": "1.0.0",
+  "homepage": "http://hallojs.org",
+  "version": "1.0.1dev",
   "dependencies": {},
   "devDependencies": {
     "async": ">=0.1.18",
