--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "devDependencies": {
     "async": ">=0.1.18",
     "docco-husky": ">=0.3.2",
-    "uglify-js": ">=1.2.6"
+    "uglify-js": ">=1.2.6",
+    "coffee-script": "1.3.x",
+    "coffeelint": "0.5.x"
   },
   "docco_husky": {
     "output_dir": "docs",
