--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "docco_husky": {
     "output_dir": "docs",
     "project_name": "Hallo Editor"
+  },
+  "scripts": {
+    "test": "phantomjs test/qunit/run.js test/index.html"
   }
 }
