Notify IKS IRC channel also on Hallo builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,7 @@ before_script:
 script:
   - ./node_modules/.bin/coffeelint -r src
   - npm test
+
+notifications:
+  irc:
+    - "irc.freenode.org#iks"
