--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "docco-husky": ">=0.3.2",
     "uglify-js": ">=1.2.6",
     "coffee-script": "1.3.x",
-    "coffeelint": "0.5.x"
+    "coffeelint": "0.5.x",
+    "phantomjs": "0.2.x"
   },
   "docco_husky": {
     "output_dir": "docs",
     "project_name": "Hallo Editor"
   },
   "scripts": {
-    "test": "phantomjs test/qunit/run.js test/index.html"
+    "test": "./node_modules/.bin/phantomjs test/qunit/run.js test/index.html"
   }
 }
