--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "project_name": "Hallo Editor"
   },
   "scripts": {
+    "pretest": "./node_modules/.bin/coffeelint -r src",
     "test": "./node_modules/.bin/phantomjs test/qunit/run.js test/index.html"
   }
 }
