--- a/package.json
+++ b/package.json
@@ -6,19 +6,20 @@
   "version": "1.0.2",
   "dependencies": {},
   "devDependencies": {
-    "async": ">=0.1.18",
-    "docco-husky": ">=0.3.2",
-    "uglify-js": ">=1.2.6",
-    "coffee-script": "1.3.x",
-    "coffeelint": "0.5.x",
-    "phantomjs": "0.2.x"
+    "grunt": "~0.4.1",
+    "grunt-cli": "~0.1.7",
+    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-concat": "~0.2.0",
+    "grunt-contrib-qunit": "~0.2.1",
+    "grunt-contrib-coffee": "~0.7.0",
+    "grunt-coffeelint": "0.0.6",
+    "grunt-contrib-clean": "~0.4.1"
   },
   "docco_husky": {
     "output_dir": "docs",
     "project_name": "Hallo Editor"
   },
   "scripts": {
-    "pretest": "./node_modules/.bin/coffeelint -r src",
-    "test": "./node_modules/.bin/phantomjs test/qunit/run.js test/index.html"
+    "test": "./node_modules/.bin/grunt test"
   }
 }
