--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "grunt-contrib-qunit": "~0.2.1",
     "grunt-contrib-coffee": "~0.7.0",
     "grunt-coffeelint": "0.0.6",
-    "grunt-contrib-clean": "~0.4.1"
+    "grunt-contrib-clean": "~0.4.1",
+    "grunt-contrib-jshint": "~0.5.4"
   },
   "docco_husky": {
     "output_dir": "docs",
