--- a/package.json
+++ b/package.json
@@ -7,20 +7,20 @@
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-cli": "~0.1.7",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-concat": "~0.2.0",
     "grunt-contrib-qunit": "~0.2.1",
     "grunt-contrib-coffee": "~0.7.0",
     "grunt-coffeelint": "0.0.6",
     "grunt-contrib-clean": "~0.4.1",
-    "grunt-contrib-jshint": "~0.5.4"
+    "grunt-contrib-jshint": "~0.5.4",
+    "grunt-bower-task": "~0.3.2"
   },
   "docco_husky": {
     "output_dir": "docs",
     "project_name": "Hallo Editor"
   },
   "scripts": {
-    "test": "./node_modules/.bin/grunt test"
+    "test": "grunt test"
   }
 }
