--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "grunt-coffeelint": "0.0.6",
     "grunt-contrib-clean": "~0.4.1",
     "grunt-contrib-jshint": "~0.5.4",
-    "grunt-bower-task": "~0.3.2"
+    "grunt-bower-task": "~0.3.2",
+    "grunt-contrib-connect": "~0.5.0",
+    "grunt-saucelabs": "~4.0.4"
   },
   "docco_husky": {
     "output_dir": "docs",
