--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "jquery": "1.9.x",
     "jquery-ui": "1.10.x",
     "jquery-htmlclean": "1.3.x",
-    "rangy": "1.2.x"
+    "rangy": "1.2.x",
+    "font-awesome": "~4.2.0"
   }
 }
